Add laravel money php bundle
