# resources/lang/en/models/currencies.php
@@ -1,0 +1,16 @@
+<?php
+
+return array (
+  'singular' => 'Currency',
+  'plural' => 'Currencies',
+  'fields' => 
+  array (
+    'id' => 'Id',
+    'currency_symbol' => 'Currency Symbol',
+    'position_of_symbol' => 'Position Of Symbol',
+    'decimal_digits' => 'Decimal Digits',
+    'digital_grouping_symbol' => 'Digital Grouping Symbol',
+    'created_at' => 'Created At',
+    'updated_at' => 'Updated At',
+  ),
+);
